log
Wed 15 Mar 2023 07:19:51 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:4: error: expected expression before ‘=’ token
   18 | a* = *b;
      |    ^
Compilation failed
09581c4
Wed 15 Mar 2023 07:19:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
31b9ee9
Wed 15 Mar 2023 07:20:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:1: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 | *aux = *a;
      | ^~~~
exercises.c:19:6: error: invalid type argument of unary ‘*’ (have ‘int’)
   19 | *a = *aux;
      |      ^~~~
Compilation failed
ba3a80d
Wed 15 Mar 2023 07:23:26 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   18 | a = *b;
      |   ^
exercises.c:19:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 | a = aux;
      |   ^
cc1: all warnings being treated as errors
Compilation failed
dd631ec
